.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Candidate__c/VMS_Candidate__c.object-meta.xml
<CustomObject>
    <label>VMS Candidate</label>
    <nameField>
        <label>VMS Candidate External Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VMS Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>