.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Candidate__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VMS Candidates</relationshipLabel>
    <relationshipName>VMS_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>