.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Candidate__c/fields/Candidate_Info__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Info__c</fullName>
    <label>Candidate Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>